[package]
name = "poc"
version = "0.1.0"
authors = ["gorka"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-streams = { git = "https://github.com/iotaledger/streams" }
failure = "0.1"
iota-lib-rs = "0.4.1"
openweather = { git = "https://github.com/caemor/openweather" }
iota-conversion = { git = "https://github.com/iotaledger/iota.rs.git" }
